[package]
name = "tuisample"
version = "0.1.0"
authors = ["jiashiwen"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#tui = "0.15"
#termion = "1.5"
rand = "0.8.4"
#tui = { version = "0.15", default-features = false, features = ['crossterm'] }
tui = { version = "0.15", default-features = false, features = ['crossterm', 'serde'] }
#crossterm = "0.20.0"
crossterm = { version = "0.20.0", features = ["serde"] }
anyhow = "1.0.42"
ron = "0.6.4"
bugreport = "0.4"
serde = "1.0.126"
clap = { version = "2.33", default-features = false }
log = "0.4"
log4rs = "1.0.0"
#simplelog = { version = "0.10", default-features = false }
dirs-next = "2.0"
scopeguard = "1.1"
unicode-width = "0.1"
itertools = "0.10.0"


